manifests/production/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: powerdns-restrict-egress
  namespace: dns-platform
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: powerdns-platform
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dns-platform
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 8081
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dns-platform
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8080
